# gstd-1.x

gstd/: gstd.c  gstd_object.h  gstd_session.h  gstd_tcp.h
gstd_client/: Makefile.am  gstd_client.c  gstd_client.h  main.c
